--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
     </header>
     <main>
       <section class="header-section">
-        <h1 class="header">
-          Ефективні рішення для<br />
-          вашого бізнесу
-        </h1>
-        <button class="order-btn" type="button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="header">Ефективні рішення для вашого бізнесу</h1>
+          <button class="order-btn" type="button">Замовити послугу</button>
+        </div>
       </section>
-      <div class="container">
-        <section class="benefits-section">
+      <section class="benefits-section">
+        <div class="container">
           <h2 class="visually-hidden">Наші особливості</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
@@ -73,10 +72,10 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container">
-        <section class="description-section">
+        </div>
+      </section>
+      <section class="description-section">
+        <div class="container">
           <h2 class="description-header">Чим ми займаємося</h2>
           <ul class="descr-list">
             <li class="descr-item">
@@ -107,21 +106,25 @@
               />
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
       <section class="team-section">
         <div class="container">
           <h2 class="description-header">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
               <img class="team-img" src="./images/igor.jpg" alt="Ігор" width="270" height="260" />
-              <h3 class="team-member">Ігор Дем'яненко</h3>
-              <p class="team-post">Product Designer</p>
+              <div class="team-descr">
+                <h3 class="team-member">Ігор Дем'яненко</h3>
+                <p class="team-post">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img class="team-img" src="./images/olga.jpg" alt="Ольга" width="270" height="260" />
-              <h3 class="team-member">Ольга Рєпіна</h3>
-              <p class="team-post">Frontend Developer</p>
+              <div class="team-descr">
+                <h3 class="team-member">Ольга Рєпіна</h3>
+                <p class="team-post">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -131,8 +134,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member">Микола Тарасов</h3>
-              <p class="team-post">Marketing</p>
+              <div class="team-descr">
+                <h3 class="team-member">Микола Тарасов</h3>
+                <p class="team-post">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -142,8 +147,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member">Михайло Єрмаков</h3>
-              <p class="team-post">UI Designer</p>
+              <div class="team-descr">
+                <h3 class="team-member">Михайло Єрмаков</h3>
+                <p class="team-post">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
